# VikingZero

./: .gitignore  README.md  graphics.py  pyproject.toml  requirements.txt  setup.py
dashapp/: app.py  data.py  index.py  sacred_app.py  test_app.py
dashapp/components/: connect4.py  sacred.py  tree.py
dashapp/controllers/: connect4_states_controller.py  sacred_controller.py
dashapp/pages/: connect4_states.py  sacred.py
flask_react_example/backend/: game.py
notebooks/: connect4.yaml  run_alphago.ipynb  step_tutorial.ipynb  test_MCTS_policy_optim.ipynb  test_tictactoe.yaml  tictactoe_alphago.yaml  tictactoe_state.ipynb
pyqt/: data.py  main_view.py  view.py  view.ui
src/: Untitled.ipynb
src/agents/: connect4_agent.py  mcts.py
src/designer/: connect4.py  connect4_designer.py
src/environments/: connect4.py  connect4_env.py
src/notebooks/: test_connect4.ipynb
src/vikingzero/: __init__.py  connect4_uci_test.py  designer.py  mcts.py  run_agent.py  search.py  utils.py
src/vikingzero/DNN/: connect4_uci_test.py  nn.py
src/vikingzero/agents/: agents.py  alphago.py  connect4_agent.py  tictactoe_agents.py
src/vikingzero/designers/: connect4_designer.py
src/vikingzero/environments/: connect4_env.py  tictactoe_env.py
tests/: connect4.yaml  create_state_lookups.py  neptune_example.py  plot_mcts_tree.py  run_agent.py  run_alphago.py  test_alphago.py  test_alphago.yaml  test_sacred.yaml  test_sacred_file.py  test_tictactoe.yaml  tictactoe_alphago.yaml
tests/agents/: test_alpha_zero.py  test_connect4_agent.py  test_tictactoe_agent.py
tests/environments/: dev_test_connect4_env.py  test_connect4.py  test_connect4_env.py  test_tictactoe_env.py
vikingzero_dashboard/: .flaskenv
vikingzero_dashboard/backend/: api.py
vikingzero_dashboard/src/: connect4.css
