[tool.poetry]
name = "VikingZero"
version = "0.1.0"
description = ""
authors = ["David SeWell <davidsewell3145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.2"
numpy = "^1.19.0"
sacred = "^0.8.1"
jupyterlab = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
h5py = "^2.10.0"
tables = "^3.6.1"
PyYAML = "^5.3.1"
pymongo = "^3.11.0"
qtmodern = "^0.2.0"
pyqtgraph = "^0.11.0"
PyQtWebEngine = "^5.15.0"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
neptune-client = "^0.4.120"
tensorboardX = "^2.1"
tensorboard = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

