[tool.poetry]
name = "VikingZero"
version = "0.1.0"
description = ""
authors = ["David SeWell <davidsewell3145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.2"
numpy = "1.16.4"
jupyterlab = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.0"
h5py = "^2.10.0"
tables = "^3.6.1"
PyYAML = "^5.3.1"
python-dotenv = "^0.14.0"
tensorboard = "^2.3.0"
tensorflow = "^2.3.1"
tensorboardX = "^2.1"
torch = "^1.6.0"
torchvision = "^0.7.0"
tqdm = "^4.50.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pydot = "^1.4.1"
neptune-client = "^0.4.125"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

