[tool.poetry]
name = "VikingZero"
version = "0.1.2"
description = ""
authors = ["David SeWell <davidsewell3145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
gym = "*"
numpy = "^1.15.4"
matplotlib = "*"
PyYAML = "*"
tensorboard = "*"
tensorboardX = "^2.1"
torch = "^1.6.0"
tqdm = "*"


[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.2"
jupyter = "^1.0.0"
pytest = "^5.2"
pydot = "^1.4.1"
neptune-client = "^0.4.125"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

